data/derived/sp14/progs/unify/prog4684.ml.out
Characters 68-98:
  | n -> [] @ [(digitsOfInt(n mod 10))];;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
